Fixed navbar height on mobile, fixes #21

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -24,7 +24,11 @@
     display: flex;
     align-items: center;
     align-content: stretch;
-    height: $navbar-height;
+    height: $navbar-sm-height;
+
+    @include media-breakpoint-up(sm) {
+      height: $navbar-height;
+    }
   }
   // Compact version
   &.navbar-sm > .container-fluid,
